--- a/.github/workflows/github-actions-push.yaml
+++ b/.github/workflows/github-actions-push.yaml
@@ -26,15 +26,6 @@ jobs:
      - name: Checkout
        uses: actions/checkout@v3
 
-     - name: Create image
-       run: make
-
-     - name: Log in to Docker Hub
-       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-       with:
-         username: ${{ secrets.DOCKER_USERNAME }}
-         password: ${{ secrets.DOCKER_PASSWORD }}
-
      - name: Extract metadata (tags, labels) for Docker
        id: meta
        uses: docker/metadata-action@v4
@@ -45,6 +36,18 @@ jobs:
            type=ref,event=pr
            type=semver,pattern={{version}}
            type=semver,pattern={{major}}.{{minor}}
+
+     - name: Debug
+       run: echo ${{ steps.meta.outputs }}
+
+#      - name: Create image
+#        run: make
+
+     - name: Log in to Docker Hub
+       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+       with:
+         username: ${{ secrets.DOCKER_USERNAME }}
+         password: ${{ secrets.DOCKER_PASSWORD }}
 
      # - name: Build and push
      #   uses: docker/build-push-action@v3
