--- a/.github/workflows/github-actions-push.yaml
+++ b/.github/workflows/github-actions-push.yaml
@@ -43,11 +43,11 @@ jobs:
 #      - name: Create image
 #        run: make
 
-     - name: Log in to Docker Hub
-       uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-       with:
-         username: ${{ secrets.DOCKER_USERNAME }}
-         password: ${{ secrets.DOCKER_PASSWORD }}
+#      - name: Log in to Docker Hub
+#         uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+#         with:
+#           username: ${{ secrets.DOCKER_USERNAME }}
+#           password: ${{ secrets.DOCKER_PASSWORD }}
 
      # - name: Build and push
      #   uses: docker/build-push-action@v3
